--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+# Ignorar variables de entorno
 .env
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependencias
+/node_modules
+
+# Build
+/dist
