--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-basic-auth": "^1.2.1",
     "mssql": "^12.0.0"
   },
   "devDependencies": {
